# FoilRs

./: .gitattributes  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  publish.yml  release-binaries.yml
crates/foil_rs/: Cargo.toml  README.md
crates/foil_rs/examples/: bench_headless.rs  export_multi_polars_csv.rs  export_polar_csv.rs  headless.rs
crates/foil_rs/src/: lib.rs
crates/foil_rs/src/airfoil/: mod.rs  naca.rs
crates/foil_rs/src/solvers/: polar.rs
crates/foil_rs/src/solvers/panel/: geometry.rs  mod.rs  panels.rs  tests.rs
crates/foil_rs/src/state/: mod.rs
crates/foil_rs/tests/: aero_tests.rs
crates/foil_rs_bevy/: Cargo.toml  LICENSE  README.md
crates/foil_rs_bevy/src/: lib.rs  main.rs  state.rs
crates/foil_rs_bevy/src/plotter/: mod.rs
crates/foil_rs_bevy/src/ui/: config.rs  feathers_theme.rs  mod.rs  style.rs  systems.rs  types.rs
crates/foil_rs_bevy/src/ui/layout/: flow.rs  geometry.rs  mod.rs  numeric.rs  panel_settings.rs  polars.rs  summary.rs  topbar.rs
crates/foil_rs_bevy/src/views/: cp_view.rs  mod.rs  polar_view.rs
examples/: bench_headless.rs  headless.rs
scripts/: release-check.sh  setup-git-hooks.sh
src/: lib.rs  main.rs  math.rs
src/airfoil/: naca.rs
src/plotter/: mod.rs
src/solvers/: boundary_layer.rs  mod.rs  polar.rs
src/solvers/panel/: mod.rs  panels.rs  tests.rs
src/state/: mod.rs
src/ui/: feathers_theme.rs  mod.rs  style.rs  systems.rs  types.rs
src/ui/layout/: flow.rs  geometry.rs  mod.rs  numeric.rs  panel_settings.rs  summary.rs  topbar.rs
src/views/: cp_view.rs  field_view.rs  mod.rs  panel_view.rs  polar_view.rs
tests/: aero_tests.rs
