[package]
name = "foil_rs"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Core airfoil geometry + panel-method solver for FoilRs (no Bevy dependency)."
repository = "https://github.com/carrapaz/FoilRs"
homepage = "https://github.com/carrapaz/FoilRs"
documentation = "https://docs.rs/foil_rs"
readme = "README.md"
rust-version = "1.92.0"
keywords = ["aerodynamics", "airfoil", "panel-method"]

[dependencies]
glam = "0.30.9"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
