[package]
name = "foil_rs_bevy"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "FoilRs"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking", "experimental_bevy_feathers"] }
foil_rs = { path = "../foil_rs" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

