[package]
name = "foil_rs_bevy"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Bevy UI frontend for FoilRs (interactive airfoil playground)."
repository = "https://github.com/carrapaz/FoilRs"
homepage = "https://github.com/carrapaz/FoilRs"
documentation = "https://docs.rs/foil_rs_bevy"
readme = "README.md"
rust-version = "1.92.0"

[[bin]]
name = "FoilRs"
path = "src/main.rs"

[features]
default = []
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.17.3", features = ["experimental_bevy_feathers"] }
foil_rs = { version = "0.1.2", path = "../foil_rs" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
