[package]
name = "foil_rs_bevy"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "Bevy UI frontend for FoilRs (interactive airfoil playground)."
repository = "https://github.com/carrapaz/FoilRs"
homepage = "https://github.com/carrapaz/FoilRs"
documentation = "https://docs.rs/foil_rs_bevy"
readme = "README.md"
rust-version = "1.92.0"

[[bin]]
name = "FoilRs"
path = "src/main.rs"

[features]
default = []
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_image",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh",
    "bevy_picking",
    "bevy_render",
    "bevy_shader",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "experimental_bevy_feathers",
    "keyboard",
    "mouse",
    "multi_threaded",
    "ui_picking",
    "wayland",
    "x11",
] }
foil_rs = { version = "0.1.3", path = "../foil_rs" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
